--- a/app/views/students/profile.html
+++ b/app/views/students/profile.html
@@ -1,8 +1,7 @@
 <div class="row" ng-controller='profile'>
     <div class="col-md-6">
-        <img style="width: 300px"
-            src="https://scontent.fsgn2-4.fna.fbcdn.net/v/t1.0-9/19510250_1586968644707206_7384304757417662397_n.jpg?_nc_cat=101&_nc_oc=AQkSvrRUtT9nueJ3CDR5W7aaymERwnVd3aBHuZbTx7KmAGrnJhH2aVURaovD3BpU3Nw&_nc_ht=scontent.fsgn2-4.fna&oh=130e0d730516fc7378ea32f5760a9119&oe=5E1524C2"
-            alt="">
+        <img style="width: 300px" src="https://via.placeholder.com/150"
+            alt="avatar">
     </div>
     <div class="col-md-6">
 
