--- a/app/views/partials/nav.html
+++ b/app/views/partials/nav.html
@@ -35,8 +35,8 @@
 		</ul>
 	</div>
 </nav> -->
-<div class="container">
-	<img src="images/banner.png" alt="">
+<div class="container-fluid p-0">
+	<img width="100%" height="200px" src="https://www.digitalcrafts.com/sites/default/files/AngularJS-header.jpg" alt="">
 	<nav class="navbar navbar-expand-sm navbar-dark" style="background-color: #0b1a33;" ng-controller="NavCtrl">
 		<a class="navbar-brand" href="#">Online Training<span class="sr-only">(current)</span></a>
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
