--- a/app/views/subjects/list.html
+++ b/app/views/subjects/list.html
@@ -1,16 +1,27 @@
 <div ng-controller="SubjectCtrl">
-    <div class="row alert alert-success">
-        <h4 >List of Subjects</h4>
+    <div class="row alert alert-success" ng-if="isLogin() === true">
+        <h4>Danh sách các môn học</h4>
     </div>
     <div class="row">
-        <table class="table table-bordered table-striped">
+        <div class="card col-md-4"
+            ng-repeat="x in subjects.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) track by $index ">
+            <div class="card-header">
+                {{ x.Name }}
+            </div>
+            <div class="card-body">
+                <img alt="{{x.Name}}" class="img-fluid" ng-src="images/logos/{{x.Logo}}" width="50">
+                <p><a ng-href="#!/takeQuiz/{{x.Id}}">Take Quiz</a></p>
+            </div>
+        </div>
+        <!-- <table class="table table-bordered table-striped">
             <tr>
                 <td>No.</td>
                 <td>Image</td>
                 <td>Name</td>
                 <td>&nbsp;</td>
             </tr>
-            <tr ng-repeat="x in subjects.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) track by $index ">
+            <tr
+                ng-repeat="x in subjects.slice(((currentPage-1)*itemsPerPage), ((currentPage)*itemsPerPage)) track by $index ">
                 <td>{{ x.Id }} - {{$index}}</td>
                 <td>
                     <img alt="{{x.Name}}" class="img-fluid" ng-src="images/logos/{{x.Logo}}" width="50">
@@ -20,10 +31,14 @@
                     <a ng-href="#!/takeQuiz/{{x.Id}}">Take Quiz</a>
                 </td>
             </tr>
-        </table>
+        </table> -->
+
+
     </div>
     <div class="row">
-
         <ul uib-pagination total-items="totalItems" ng-model="currentPage" ng-change="pageChanged()"></ul>
     </div>
+
+
+
 </div>
